--- a/src/components/ApplicationPage/Chat.css
+++ b/src/components/ApplicationPage/Chat.css
@@ -30,6 +30,8 @@
 
 .message-content {
   display: flex;
+  margin-left: 20px;
+  color: #4e4d4d;
 }
 
 .message-sender {
@@ -46,5 +48,17 @@
   margin: 5px;
   border: 1px solid rgb(75, 75, 75);
   border-radius: 5px;
-  color:rgb(0, 0, 0);
+  /* color:rgb(0, 0, 0); */
+  color: #4e4d4d;
+}
+
+.chat-user-input {
+  padding: 10px;
+  width: 90%;
+  margin: 15px auto;
+  border-radius: 2px;
+  display: block;
+  border: 1px solid rgb(126, 126, 126);
+  color: #4e4d4d;
+  box-shadow: inset 0 4px 8px #f8f8f8;
 }
