--- a/src/components/ApplicationPage/RoomCreate.css
+++ b/src/components/ApplicationPage/RoomCreate.css
@@ -23,7 +23,7 @@
   font-weight: 100;
   font-size: 4.5em;
   padding-bottom: 30px;
-  color: rgb(255, 255, 255);
+  color: rgb(244,153,115);
 }
 
 .room-create-input {
@@ -38,7 +38,7 @@
   color: rgb(244,153,115);
   border: 0;
   outline: 0;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid rgb(244,153,115);
 }
 
 input:focus::-webkit-input-placeholder { color:transparent; }
