--- a/src/components/ApplicationPage/AppNavBar.css
+++ b/src/components/ApplicationPage/AppNavBar.css
@@ -7,7 +7,7 @@
 }
 
 .video {
-  margin-left: 50%;
+  margin-left: 65%;
   margin-right: 15px;
 }
 
@@ -41,3 +41,21 @@
  .nav-bar-wrapper {
    width: 100%;
  }
+
+ @media (max-width: 1024px) {
+  .video {
+    margin-left: 50%;
+  }
+}
+
+@media (max-width: 900px) {
+  .video {
+    margin-left: 40%;
+  }
+}
+
+@media (max-width: 760px) {
+  .video {
+    margin-left: 20%;
+  }
+}
