Added code editor output component at bottom of code editor

--- a/src/components/ApplicationPage/EditorView.css
+++ b/src/components/ApplicationPage/EditorView.css
@@ -26,3 +26,8 @@
 .whiteboard-container, .upper-canvas {
   height: 100% !important;
 }
+
+.editor-output-wrapper {
+  margin-top: 30px;
+  text-align: center;
+}
