--- a/src/components/ApplicationPage/Chat.css
+++ b/src/components/ApplicationPage/Chat.css
@@ -44,6 +44,11 @@
   padding-bottom: 10px;
 }
 
+.user {
+  color: #4e4d4d;
+  margin-left: 20px;
+}
+
 .message-sender {
   color: blue;
   font-weight: 700;
@@ -56,10 +61,15 @@
 
 .chat-tabs li {
   margin: 5px;
+  padding: 5px;
   border: 1px solid rgb(75, 75, 75);
   border-radius: 5px;
   color: #4e4d4d;
 }
+
+.chat-tabs li:hover {
+  cursor:pointer;
+ }
 
 .chat-user-input {
   padding: 10px;
@@ -76,3 +86,4 @@
 ::placeholder {
   color: rgb(244,153,115);
 }
+
