Took out CSS styling background in app for now, but left as a comment

--- a/src/components/ApplicationPage/AppNavBar.css
+++ b/src/components/ApplicationPage/AppNavBar.css
@@ -1,5 +1,6 @@
 .nav-bar-wrapper {
   height: 10vh;
+  /* background: rgb(46,94,102); */
 }
 
 .view-switch, .video, .audio {
@@ -20,6 +21,7 @@
   margin-right: 10%;
   padding-left: 0px;
   font-size: .8em;
+  /* color: white; */
 }
 
 .editor-mode-text {
@@ -28,6 +30,7 @@
   margin-left: 15px;
   text-align: left;
   flex-wrap: nowrap;
+  /* color: white; */
 }
 
 .editor-mode-text, .video, .audio:hover {
