--- a/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
+++ b/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
@@ -1,31 +1,39 @@
 .whiteBoardControls-container {
-    position: absolute;
-    width: 50px;
+    /* position: absolute; */
+    display: flex;
+    flex-direction: row;
     z-index: 1;
+    border: 1px solid #F1F1F1;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .tool {
+    margin: 5px 15px;
     width: 50px;
     height: 50px;
-
-    margin-top: 5px;
 }
 
 .green-brush {
     background-color: green;
+    border-radius: 80px;
 }
 
 .red-brush {
     background-color: red;
+    border-radius: 80px;
 }
 .blue-brush {
     background-color: blue;
+    border-radius: 80px;
 }
 .yellow-brush {
     background-color: yellow;
+    border-radius: 80px;
 }
 .black-brush {
     background-color: black;
+    border-radius: 80px;
 }
 
 .eraser {
@@ -35,6 +43,16 @@
 
 .nuke {
     border: 1px solid black;
+    display:inline-block;
+    color:#444;
+    border:1px solid #CCC;
+    background:#DDD;
+    box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
+    padding-top: 3px;
+    cursor:pointer;
+    vertical-align:middle;
+    text-align: center;
+    width: 75px;
 }
 
 .change-size-button {
