Revert "merge firepad into master for multi cursor support"
This reverts commit 8788b9c553841bde3243e56d4da4154d8eec9328, reversing
changes made to c9e47f8a8629b94525bb1f5209188dfa8d3f5696.

--- a/src/components/LandingPage/Forms/LoginForm.css
+++ b/src/components/LandingPage/Forms/LoginForm.css
@@ -7,7 +7,7 @@
   width: 350px;
   height: 500px;
   padding: 10px;
-  background: rgb(244,153,115);
+  background: rgb(0, 111, 255);
   font-size: 24px;
   color: white;
 }
@@ -18,7 +18,7 @@ h1 {
 }
 
 input:-webkit-autofill {
-  -webkit-box-shadow: inset 0 0 0px 9999px rgb(244,153,115);
+  -webkit-box-shadow: inset 0 0 0px 9999px rgb(0, 111, 255);
   -webkit-text-fill-color:white !important;
 }
 
@@ -82,7 +82,7 @@ input, .demo-text {
 
 .btn-form {
   margin-top: 15px;
-  font-size: 1.3em;
+  font-size: 1em;
 	text-decoration: none;
 	padding: 8px 25px;
 	display: inline-block;
