--- a/src/components/ApplicationPage/Chat.css
+++ b/src/components/ApplicationPage/Chat.css
@@ -12,36 +12,15 @@
   height: 100% !important
 }
 
-.chat-display-audio {
+.chat-display {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   min-height: 20vh;
   height: 70vh;
-  overflow-y: auto;
-}
-
-.chat-display-video {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  min-height: 20vh;
-  height: 25vh;
-  overflow-y: auto;
-}
-
-.chat-messages {
-  display: flex;
-  overflow-y: auto;
-  flex-direction: column;
-  overflow-wrap: break-word;
-  word-wrap: break-word; /* Firefox support */
 }
 
 .message-content {
   display: flex;
-  margin-left: 20px;
-  margin-right: 20px;
-  color: #4e4d4d;
-  padding-bottom: 10px;
 }
 
 .message-sender {
@@ -58,21 +37,5 @@
   margin: 5px;
   border: 1px solid rgb(75, 75, 75);
   border-radius: 5px;
-  color: #4e4d4d;
-}
-
-.chat-user-input {
-  padding: 10px;
-  width: 90%;
-  font-size: 20px;
-  margin: 15px auto;
-  border-radius: 2px;
-  display: block;
-  border: 1px solid rgb(126, 126, 126);
-  color: #4e4d4d;
-  box-shadow: inset 0 4px 8px #f8f8f8;
-}
-
-::placeholder {
-  color: rgb(244,153,115);
+  color:rgb(0, 0, 0);
 }
