--- a/src/components/ApplicationPage/RoomCreate.css
+++ b/src/components/ApplicationPage/RoomCreate.css
@@ -5,7 +5,10 @@
   left: 0;
   right: 0;
   margin: auto;
-  background: rgb(46,94,102);
+  background-color: #f1f1f1;
+  background: rgb(0, 111, 255);
+  /* Change to primary color once decided */
+  /* background: rgb(255, 100, 65); */
   text-align: center;
   display: flex;
   justify-content: center;
@@ -14,8 +17,8 @@
 
 .room-create-wrapper {
   margin-bottom: 20px;
-  text-align: center;
-  color: rgb(170, 4, 4);
+  text-align: center; 
+  color: rgb(153, 153, 153);
 }
 
 .room-create-header {
@@ -23,40 +26,33 @@
   font-weight: 100;
   font-size: 4.5em;
   padding-bottom: 30px;
-  color: rgb(244,153,115);
+  color: rgb(255, 255, 255);
 }
 
 .room-create-input {
   width: 40%;
   padding: 15px 15px;
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
   display: block;
   margin: 20px auto;
   border-radius: 20px solid white;
-  background: rgb(46,94,102);
-  color: rgb(244,153,115);
+  background: rgb(0, 111, 255);
+  color: white;
   border: 0;
   outline: 0;
-  border-bottom: 2px solid rgb(244,153,115);
+  border-bottom: 2px solid white;
 }
 
-input:focus::-webkit-input-placeholder {
-  color:transparent;
+input:focus::-webkit-input-placeholder { color:transparent; }
+
+::placeholder {
+  color: white;
+  opacity: 1;
 }
 
 .btn-room {
-  font-size: 1.3em;
-  border: 1px solid rgb(244,153,115);
-  background-color: rgb(46,94,102);
-  text-align: center;
-  color: rgb(244,153,115);
-}
-
-.btn-room:hover {
-  border: 1px solid rgb(244,153,115);
-  background-color: rgb(244,153,115);
-  color: rgb(46,94,102);
+  color: #999;
 }
 
 @media (max-width: 760px) {
