--- a/src/components/ApplicationPage/Chat.css
+++ b/src/components/ApplicationPage/Chat.css
@@ -65,7 +65,13 @@
   padding: 5px;
   border: 1px solid rgb(75, 75, 75);
   border-radius: 5px;
-  color: #4e4d4d;
+  color: white;
+  display: inline-block;
+  border: 3px solid #FFFFFF;
+  border-radius: 10px;
+  margin-right:10px;
+  background-color: rgb(244,153,115);
+  text-align: center;
 }
 
 .chat-tabs li:hover {
