--- a/src/components/ApplicationPage/WebCam/WebCam.css
+++ b/src/components/ApplicationPage/WebCam/WebCam.css
@@ -9,12 +9,18 @@ video {
 }
 
 .video-large {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   /* max-width: 640px; */
   /* max-height: 480px; */
   /* border: 1px solid black; */
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */ 
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+  position: relative;
 }
 
 .video-local-large {
@@ -36,6 +42,7 @@ video {
   max-height: 180px;
   position: absolute;
   z-index: 2;
+  border-radius: 2px;
 }
 
 .room-name {
