--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -11,7 +11,7 @@ header {
 	height:100%;
 	min-height: 100%;
 	display: flex;
-	flex-direction: column;
+  flex-direction: column;
 }
 
 .landing-header {
@@ -52,19 +52,18 @@ font-weight: 300;
   justify-content: center;
 }
 
-footer {
-  flex-direction: column-reverse;
-  justify-content: center;
-  margin-top: 2.5em !important;
+.footer-container {
+  margin-top: auto;
+  padding-bottom: 0.5em;
 }
+
 
 .scroll-icon {
   width: 1em;
-  flex-direction: column-reverse;
-  text-align: center;
 }
 
 #header {
+  overflow: hidden;
   background-image: url('../../assets/images/outdoor.jpg');
 	color: white;
 	background-size: cover;
