--- a/src/components/ApplicationPage/Chat.css
+++ b/src/components/ApplicationPage/Chat.css
@@ -51,26 +51,25 @@
 }
 
 .message-sender {
-  color: blue;
+  color: rgb(46,94,102);
   font-weight: 700;
   margin-right: 0.4em;
 }
 
 .chat-tabs {
   display: flex;
+  background-color: rgb(46,94,102);
 }
 
 .chat-tabs li {
   margin: 5px;
   padding: 5px;
-  border: 1px solid rgb(75, 75, 75);
+  border: 1px solid rgb(244,153,115);
   border-radius: 5px;
-  color: white;
+  color: rgb(244,153,115);
   display: inline-block;
-  border: 3px solid #FFFFFF;
-  border-radius: 10px;
-  margin-right:10px;
-  background-color: rgb(244,153,115);
+  /* margin-right:10px; */
+  background-color: rgb(46,94,102);
   text-align: center;
 }
 
@@ -78,19 +77,27 @@
   cursor:pointer;
  }
 
+ .chat-tabs li:active {
+   background-color: rgb(244,153,115);
+   color: rgb(46,94,102);
+ }
+
 .chat-user-input {
+  background-color: rgb(46,94,102);
   padding: 10px;
   width: 90%;
   font-size: 20px;
   margin: 15px auto;
   border-radius: 2px;
   display: block;
-  border: 1px solid rgb(126, 126, 126);
-  color: #4e4d4d;
-  box-shadow: inset 0 4px 8px #f8f8f8;
+  border: 1px solid rgb(244,153,115);
+  color: rgb(244,153,115);
+}
+
+  input:focus {
+  outline: none;
 }
 
 ::placeholder {
   color: rgb(244,153,115);
 }
-
