--- a/src/components/ApplicationPage/AppNavBar.css
+++ b/src/components/ApplicationPage/AppNavBar.css
@@ -1,6 +1,6 @@
 .nav-bar-wrapper {
   height: 10vh;
-  /* background: rgb(46,94,102); */
+  background: rgb(46,94,102);
 }
 
 .view-switch, .video, .audio {
