--- a/src/components/ApplicationPage/Room.css
+++ b/src/components/ApplicationPage/Room.css
@@ -14,7 +14,7 @@
 .right-side-wrapper {
   height: 90vh;
   width: 30%;
-  background-color: rgb(46,94,102);
+  background-color: rgb(43, 43, 43);
 }
 
 .top-side-wrapper {
