--- a/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
+++ b/src/components/ApplicationPage/Editors/WhiteBoardEditorControls.css
@@ -17,7 +17,7 @@
 
 .whiteboard {
   -webkit-tap-highlight-color:transparent;
-  width: 100px; 
+  width: 100px;
   border: 1px solid #eeeeee;
   display:inline-block;
   color:#444;
@@ -82,6 +82,10 @@
     text-align: center;
     width: 75px;
     font-size: 20px;
+}
+
+.size-picker {
+    font-size: 25px;
 }
 
 .whiteboard-num {
