--- a/src/components/LandingPage/Forms/RegistrationForm.css
+++ b/src/components/LandingPage/Forms/RegistrationForm.css
@@ -1,4 +1,4 @@
-#firstName, #lastName, #username, #password, #passwordConfirm  {
+#emailAddress, #password  {
   border: 0;
   outline: 0;
   border-bottom: 2px solid white;
